# backend/src/main/java/com/a702/hup/application/contorller/AgendaController.java
@@ -1,13 +1,11 @@
 package com.a702.hup.application.contorller;
 
+import com.a702.hup.application.dto.request.AgendaAssigneeSaveRequest;
 import com.a702.hup.application.dto.request.AgendaCreateRequest;
 import com.a702.hup.application.facade.AgendaFacade;
-import com.a702.hup.domain.agenda.AgendaService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.security.core.userdetails.User;
@@ -22,9 +20,25 @@ import org.springframework.web.bind.annotation.RestController;
 public class AgendaController {
     private final AgendaFacade agendaFacade;
 
+    /**
+     * @author 강용민
+     * @date 2024-04-29
+     * @description 의사결정 저장
+     */
     @PostMapping
     public ResponseEntity<Void> saveAgenda(@AuthenticationPrincipal(errorOnInvalidType = true) User user, @RequestBody @Valid AgendaCreateRequest request){
         agendaFacade.saveAgenda(user, request);
+        return ResponseEntity.status(HttpStatus.CREATED).build();
+    }
+
+    /**
+     * @author 강용민
+     * @date 2024-04-29
+     * @description 의사결정 저장
+     */
+    @PostMapping("/assignee")
+    public ResponseEntity<Void> saveAssignee(@AuthenticationPrincipal(errorOnInvalidType = true) User user, @RequestBody @Valid AgendaAssigneeSaveRequest request){
+        agendaFacade.saveAgendaMember(user, request);
         return ResponseEntity.status(HttpStatus.CREATED).build();
     }
 }
